# llama.cpp-launcher-reborn

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_EN.md  build.rs
.github/workflows/: release.yml
src/: app.rs  i18n.rs  kv_cache.rs  main.rs  shortcut.rs
src/config/: settings.rs
src/engine/: AGENTS.md  rpc.rs  server.rs
src/ui/: AGENTS.md  helper.rs  launch_commands_panel.rs  log_panel.rs  mod.rs  model_panel.rs  params_panel.rs  presets_panel.rs  rpc_panel.rs  server_panel.rs  theme.rs
