[package]
name = "llama_cpp_lunch"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
log = "0.4"
env_logger = "0.11.10"
sys-locale = "0.3.2"
shortcuts-rs = "1.1.1"
dirs = "5.0"

[build-dependencies]
winres = "0.1.12"
