[package]
name = "llama_cpp_launcher"
version = "0.1.2"
edition = "2021"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
log = "0.4"
chrono = "0.4"
sys-locale = "0.3.2"
shortcuts-rs = "1.1.1"

dirs = "5.0"

gguf-rs = "0.1.7"

egui-toast = "0.20"

[build-dependencies]
winres = "0.1.12"
